Se agregan fuentes
Se agre fuentes Arvo y Lato

--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Musical - Programación Web 1</title>
+    <link rel="stylesheet" href="style/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Pagina Musical</h1>
+        <h1 class="arvo-bold">Pagina Musical</h1>
     </header>
     <main>
-        <h2>Prueba H2</h2>
+        <h2 class="arvo-bold">Prueba H2</h2>
+        <p class="lato-regular">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio corrupti voluptates optio reiciendis nisi obcaecati fugit? Beatae aperiam cumque dolorem voluptas explicabo doloribus incidunt expedita, iste nesciunt, vero laudantium blanditiis?</p>
     </main>
-    <footer>
+    <footer class="lato-regular">
         Lucas Rafael Peña Gutierrez - lucas.penag@davinci.edu.ar - 2025
     </footer>
 </body>
