--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1 class="arvo-bold">Pagina Musical</h1>
+        <img src="img/RDR2HEADER.jpg" alt="Imagen Red Dead Redemption 2 header">
     </header>
     <main>
         <h2 class="arvo-bold">Prueba H2</h2>
