Se agregan fondo para footer y para parrafos y se modifica el color de la letra

--- a/index.html
+++ b/index.html
@@ -14,10 +14,19 @@
         <img src="img/RDR2HEADER.jpg" alt="Imagen Red Dead Redemption 2 header">
     </header>
     <main>
-        <h2 class="arvo-bold">Prueba H2</h2>
-        <p class="lato-regular">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio corrupti voluptates optio reiciendis nisi obcaecati fugit? Beatae aperiam cumque dolorem voluptas explicabo doloribus incidunt expedita, iste nesciunt, vero laudantium blanditiis?</p>
+        <h1 class="arvo-bold">La música que le dio alma al Salvaje Oeste</h1>
+        <p class="lato-regular">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio corrupti voluptates optio reiciendis nisi obcaecati fugit? Beatae aperiam cumque dolorem voluptas explicabo doloribus incidunt expedita, iste nesciunt, vero laudantium blanditiis?
+
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque omnis repudiandae odit voluptatem at eum, quibusdam exercitationem praesentium optio aperiam atque tempora iusto, ea expedita cumque. Quaerat consectetur earum aut.
+
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam laudantium impedit, temporibus cupiditate animi minima officia similique voluptates voluptate repudiandae autem, aperiam deserunt quasi, consequatur libero obcaecati provident deleniti aut?
+
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus commodi nostrum minus ut tenetur, consectetur, facilis doloremque vitae est rerum, quo ad ipsam sapiente. Atque illum quo in tenetur dolor.
+
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In debitis, earum corrupti numquam accusamus ullam atque sequi quos doloribus mollitia, assumenda quibusdam veniam adipisci ducimus beatae neque obcaecati eligendi blanditiis.
+        </p>
     </main>
     <footer class="lato-regular">
-        Lucas Rafael Peña Gutierrez - lucas.penag@davinci.edu.ar - 2025
+        <p class="pFooter">Lucas Rafael Peña Gutierrez - lucas.penag@davinci.edu.ar - 2025</p>
     </footer>
 </body>
