--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <header>
         <img src="img/RDR2HEADER.jpg" alt="Imagen Red Dead Redemption 2 header">
     </header>
+    <aside>
+        <h3 class="arvo-bold">Menu</h3>
+        <ul class="lato-regular">
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Artistas</a></li>
+            <li><a href="#">Canciones</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+    </aside>
     <main>
         <h1 class="arvo-bold">La música que le dio alma al Salvaje Oeste</h1>
         <p class="lato-regular">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio corrupti voluptates optio reiciendis nisi obcaecati fugit? Beatae aperiam cumque dolorem voluptas explicabo doloribus incidunt expedita, iste nesciunt, vero laudantium blanditiis?
