Se agregan iframes,imagenes y se reorganiza el contenido usando grid

--- a/index.html
+++ b/index.html
@@ -11,29 +11,65 @@
 </head>
 <body>
     <header>
+        <nav>NavBar</nav>
         <img src="img/RDR2HEADER.jpg" alt="Imagen Red Dead Redemption 2 header">
-    </header>
-    <aside>
-        <h3 class="arvo-bold">Menu</h3>
-        <ul class="lato-regular">
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Artistas</a></li>
-            <li><a href="#">Canciones</a></li>
-            <li><a href="#">Contacto</a></li>
-        </ul>
-    </aside>
-    <main>
         <h1 class="arvo-bold">La música que le dio alma al Salvaje Oeste</h1>
-        <p class="lato-regular">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio corrupti voluptates optio reiciendis nisi obcaecati fugit? Beatae aperiam cumque dolorem voluptas explicabo doloribus incidunt expedita, iste nesciunt, vero laudantium blanditiis?
+        <h2>Sumérjase en una odisea sonora que narra la épica y melancólica historia del fin de una era. Desde la tensión de los atracos y la desolación de los paisajes hasta los momentos de camaradería y la cruda realidad de la redención, cada nota de esta banda sonora teje el tapiz de una América que se desvanece.</h2>
+    </header>
+    
+    <main>
+        <section class="sectionCanciones1 sectionInterno">
+        <div class="divCancion">
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3fJeJZlQVMCKZUw0BbPkSq?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+        <p class="pCancion">American Venom</p>
+        </section>
+        <section class="sectionCanciones2 sectionInterno">
+        <div class="divCancion">
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4dCijzEgPnTwOYPCT3ATcL?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+        <p class="pCancion">Red Dead Redemption</p>
+        </section>
+        <section class="sectionCanciones3 sectionInterno">
+        <div class="divCancion">
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3okk47CKOqAm1TXmVPzNYf?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+        <p class="pCancion">Unshaken</p>
+        </section>
+        <section class="sectionCanciones4 sectionInterno">
+        <div class="divCancion">
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/71tjUqsaiFFKWpn8xhoPWh?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+        <p class="pCancion">Blood Feuds, Ancient and Modern</p>
+        </section>
 
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque omnis repudiandae odit voluptatem at eum, quibusdam exercitationem praesentium optio aperiam atque tempora iusto, ea expedita cumque. Quaerat consectetur earum aut.
-
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam laudantium impedit, temporibus cupiditate animi minima officia similique voluptates voluptate repudiandae autem, aperiam deserunt quasi, consequatur libero obcaecati provident deleniti aut?
-
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus commodi nostrum minus ut tenetur, consectetur, facilis doloremque vitae est rerum, quo ad ipsam sapiente. Atque illum quo in tenetur dolor.
-
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. In debitis, earum corrupti numquam accusamus ullam atque sequi quos doloribus mollitia, assumenda quibusdam veniam adipisci ducimus beatae neque obcaecati eligendi blanditiis.
-        </p>
+        <section class="sectionOrquesta">
+            <h3>Video de la orquesta</h3>
+            <div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/2uwb8u634M0?si=zn4HSYMvtCfCblVd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
+        <section class="sectionVideojuego">
+            <h3>Fotos del videojuego</h3>
+            <div class="divFotos">
+                <figure>
+                    <img src="img/Imagen1.jpg" alt="">
+                    <figcaption>Imagen 1</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/Imagen2.jpg" alt="">
+                    <figcaption>Imagen 2</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/Imagen3.jpg" alt="">
+                    <figcaption>Imagen 3</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/Imagen4.jpg" alt="">
+                    <figcaption>Imagen 4</figcaption>
+                </figure>
+            </div>
+        </section>
     </main>
     <footer class="lato-regular">
         <p class="pFooter">Lucas Rafael Peña Gutierrez - lucas.penag@davinci.edu.ar - 2025</p>
