Se reorganizo algunas etiquetas, se creo la clase centrar y se cambio texto en parrafos

--- a/index.html
+++ b/index.html
@@ -13,60 +13,61 @@
     <header>
         <nav>NavBar</nav>
         <img src="img/RDR2HEADER.jpg" alt="Imagen Red Dead Redemption 2 header">
-        <h1 class="arvo-bold">La música que le dio alma al Salvaje Oeste</h1>
-        <h2>Sumérjase en una odisea sonora que narra la épica y melancólica historia del fin de una era. Desde la tensión de los atracos y la desolación de los paisajes hasta los momentos de camaradería y la cruda realidad de la redención, cada nota de esta banda sonora teje el tapiz de una América que se desvanece.</h2>
+        <h1 class="arvo-bold centrar">La música que le dio alma al Salvaje Oeste</h1>
+        <h2 class="arvo-bold centrar">Sumérjase en una odisea sonora que narra la épica y melancólica historia del fin de una era. Desde la tensión de los atracos y la desolación de los paisajes hasta los momentos de camaradería y la cruda realidad de la redención, cada nota de esta banda sonora teje el tapiz de una América que se desvanece.</h2>
     </header>
     
     <main>
+        <h3 class="arvo-bold centrar">Este concierto es una invitación a revivir la profundidad emocional de Red Dead Redemption 2 a través de su música. La orquesta dará vida a las composiciones de Woody Jackson y a las inolvidables canciones de Daniel Lanois, D'Angelo y otros artistas que prestaron su talento para crear una atmósfera inigualable.</h3>
         <section class="sectionCanciones1 sectionInterno">
-        <div class="divCancion">
+        <div class="divCancion centrar">
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3fJeJZlQVMCKZUw0BbPkSq?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
-        <p class="pCancion">American Venom</p>
+        <p class="pCancion centrar lato-regular">Pura adrenalina y la justicia implacable del Oeste. Este tema es la encarnación de la venganza; una explosión de guitarras eléctricas y cuerdas trepidantes que acompañan una persecución final y catártica. Es el sonido de la determinación absoluta, de saldar todas las cuentas pendientes sin mirar atrás y de la ferocidad de un hombre que no tiene nada que perder.</p>
         </section>
         <section class="sectionCanciones2 sectionInterno">
-        <div class="divCancion">
+        <div class="divCancion centrar">
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4dCijzEgPnTwOYPCT3ATcL?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
-        <p class="pCancion">Red Dead Redemption</p>
+        <p class="pCancion centrar lato-regular">El eco solitario del Salvaje Oeste y el lamento de una era perdida. Este tema instrumental es el alma sonora de la saga. Con su icónico y melancólico arpegio de guitarra, evoca la inmensidad de paisajes indómitos, la soledad del forajido y la nostalgia por un mundo que se desvanece. Es una melodía que promete aventura y peligro a partes iguales; el sonido del horizonte abierto, del honor entre ladrones y de la carga de un pasado que nunca se puede dejar atrás.</p>
         </section>
         <section class="sectionCanciones3 sectionInterno">
-        <div class="divCancion">
+        <div class="divCancion centrar">
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3okk47CKOqAm1TXmVPzNYf?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
-        <p class="pCancion">Unshaken</p>
+        <p class="pCancion centrar lato-regular">Un himno a la resiliencia en medio de la adversidad. Profunda y conmovedora, esta canción es el reflejo del espíritu inquebrantable de Arthur frente a la pérdida y la traición. Su ritmo constante y su letra introspectiva transmiten una sensación de fortaleza interior y lealtad a los propios principios, incluso cuando todo alrededor se desmorona. Es la calma en el ojo de la tormenta, un momento de claridad y coraje.</p>
         </section>
         <section class="sectionCanciones4 sectionInterno">
-        <div class="divCancion">
+        <div class="divCancion centrar">
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/71tjUqsaiFFKWpn8xhoPWh?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
-        <p class="pCancion">Blood Feuds, Ancient and Modern</p>
+        <p class="pCancion centrar lato-regular">Tensión, urgencia y el peso de un conflicto que define una era. Este tema es la crónica de una rivalidad legendaria y la desesperada lucha por la supervivencia de la banda. Con su ritmo pulsante y sus coros solemnes, la canción crea una atmósfera de peligro inminente y confrontación inevitable. Es el sonido de la lealtad puesta a prueba, de la cacería y de ser cazado, marcando los momentos de mayor dramatismo y acción de la saga.</p>
         </section>
 
-        <section class="sectionOrquesta">
-            <h3>Video de la orquesta</h3>
-            <div>
+        <section class="sectionOrquesta centrar">
+            <h3 class="arvo-bold">Video de la orquesta</h3>
+            <div class="divOrquesta">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/2uwb8u634M0?si=zn4HSYMvtCfCblVd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
         <section class="sectionVideojuego">
-            <h3>Fotos del videojuego</h3>
+            <h3 class="centrar arvo-bold">Fotos del videojuego</h3>
             <div class="divFotos">
                 <figure>
                     <img src="img/Imagen1.jpg" alt="">
-                    <figcaption>Imagen 1</figcaption>
+                    <figcaption class="centrar">Imagen 1</figcaption>
                 </figure>
                 <figure>
                     <img src="img/Imagen2.jpg" alt="">
-                    <figcaption>Imagen 2</figcaption>
+                    <figcaption class="centrar">Imagen 2</figcaption>
                 </figure>
                 <figure>
                     <img src="img/Imagen3.jpg" alt="">
-                    <figcaption>Imagen 3</figcaption>
+                    <figcaption class="centrar">Imagen 3</figcaption>
                 </figure>
                 <figure>
                     <img src="img/Imagen4.jpg" alt="">
-                    <figcaption>Imagen 4</figcaption>
+                    <figcaption class="centrar">Imagen 4</figcaption>
                 </figure>
             </div>
         </section>
