Justificar textos y cambio de fuente los figcaption

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <nav>NavBar</nav>
         <img src="img/RDR2HEADER.jpg" alt="Imagen Red Dead Redemption 2 header">
         <h1 class="arvo-bold centrar">La música que le dio alma al Salvaje Oeste</h1>
-        <h2 class="arvo-bold centrar">Sumérjase en una odisea sonora que narra la épica y melancólica historia del fin de una era. Desde la tensión de los atracos y la desolación de los paisajes hasta los momentos de camaradería y la cruda realidad de la redención, cada nota de esta banda sonora teje el tapiz de una América que se desvanece.</h2>
+        <h2 class="arvo-bold centrar justificar">Sumérjase en una odisea sonora que narra la épica y melancólica historia del fin de una era. Desde la tensión de los atracos y la desolación de los paisajes hasta los momentos de camaradería y la cruda realidad de la redención, cada nota de esta banda sonora teje el tapiz de una América que se desvanece.</h2>
     </header>
     
     <main>
-        <h3 class="arvo-bold centrar">Este concierto es una invitación a revivir la profundidad emocional de Red Dead Redemption 2 a través de su música. La orquesta dará vida a las composiciones de Woody Jackson y a las inolvidables canciones de Daniel Lanois, D'Angelo y otros artistas que prestaron su talento para crear una atmósfera inigualable.</h3>
+        <h3 class="arvo-bold centrar justificar">Este concierto es una invitación a revivir la profundidad emocional de Red Dead Redemption 2 a través de su música. La orquesta dará vida a las composiciones de Woody Jackson y a las inolvidables canciones de Daniel Lanois, D'Angelo y otros artistas que prestaron su talento para crear una atmósfera inigualable.</h3>
         <section class="sectionCanciones1 sectionInterno">
         <div class="divCancion centrar">
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3fJeJZlQVMCKZUw0BbPkSq?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -59,15 +59,15 @@
                 </figure>
                 <figure>
                     <img src="img/Imagen2.jpg" alt="">
-                    <figcaption class="centrar">Imagen 2</figcaption>
+                    <figcaption class="centrar lato-regular">Imagen 2</figcaption>
                 </figure>
                 <figure>
                     <img src="img/Imagen3.jpg" alt="">
-                    <figcaption class="centrar">Imagen 3</figcaption>
+                    <figcaption class="centrar lato-regular">Imagen 3</figcaption>
                 </figure>
                 <figure>
                     <img src="img/Imagen4.jpg" alt="">
-                    <figcaption class="centrar">Imagen 4</figcaption>
+                    <figcaption class="centrar lato-regular">Imagen 4</figcaption>
                 </figure>
             </div>
         </section>
