Se agregan cambios necesarios para Nav y se modifica foto Header

--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 </head>
 <body>
     <header>
-        <nav>NavBar</nav>
-        <img src="img/RDR2HEADER.jpg" alt="Imagen Red Dead Redemption 2 header">
+        <nav>
+            <div class="imgDiv"><img class="imgNav" src="img/RDR2.png" alt=""></div>
+            <button class="botonMenu">
+                <img class ="imgButton"src="img/menu.png" alt="">
+            </button>
+        </nav>
+        <img src="img/RDR2HEADER2.jpg" alt="Imagen Red Dead Redemption 2 header">
         <h1 class="arvo-bold centrar">La música que le dio alma al Salvaje Oeste</h1>
         <h2 class="arvo-bold centrar justificar">Sumérjase en una odisea sonora que narra la épica y melancólica historia del fin de una era. Desde la tensión de los atracos y la desolación de los paisajes hasta los momentos de camaradería y la cruda realidad de la redención, cada nota de esta banda sonora teje el tapiz de una América que se desvanece.</h2>
     </header>
