Se agrega bordes para imagen y cambios en los textos de los h3

--- a/index.html
+++ b/index.html
@@ -50,28 +50,28 @@
         </section>
 
         <section class="sectionOrquesta centrar">
-            <h3 class="arvo-bold">Video de la orquesta</h3>
+            <h3 class="arvo-bold h3Orquesta">Donde cada nota se convierte en leyenda</h3>
             <div class="divOrquesta">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/2uwb8u634M0?si=zn4HSYMvtCfCblVd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
         <section class="sectionVideojuego">
-            <h3 class="centrar arvo-bold">Fotos del videojuego</h3>
+            <h3 class="centrar arvo-bold">Las escenas que la música hizo inmortales</h3>
             <div class="divFotos">
                 <figure>
-                    <img src="img/Imagen1.jpg" alt="">
+                    <img class="bordeRedondo" src="img/Imagen1.jpg" alt="">
                     <figcaption class="centrar">Imagen 1</figcaption>
                 </figure>
                 <figure>
-                    <img src="img/Imagen2.jpg" alt="">
+                    <img class="bordeRedondo" src="img/Imagen2.jpg" alt="">
                     <figcaption class="centrar lato-regular">Imagen 2</figcaption>
                 </figure>
                 <figure>
-                    <img src="img/Imagen3.jpg" alt="">
+                    <img class="bordeRedondo" src="img/Imagen3.jpg" alt="">
                     <figcaption class="centrar lato-regular">Imagen 3</figcaption>
                 </figure>
                 <figure>
-                    <img src="img/Imagen4.jpg" alt="">
+                    <img class="bordeRedondo" src="img/Imagen4.jpg" alt="">
                     <figcaption class="centrar lato-regular">Imagen 4</figcaption>
                 </figure>
             </div>
