Se agrega descripcion de las imagenes y un h3 nuevo

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     
     <main>
         <h3 class="arvo-bold centrar justificar">Este concierto es una invitación a revivir la profundidad emocional de Red Dead Redemption 2 a través de su música. La orquesta dará vida a las composiciones de Woody Jackson y a las inolvidables canciones de Daniel Lanois, D'Angelo y otros artistas que prestaron su talento para crear una atmósfera inigualable.</h3>
+        <h3 class="arvo-bold centrar h3Canciones">Historias Hechas Canción</h3>
         <section class="sectionCanciones1 sectionInterno">
         <div class="divCancion centrar">
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3fJeJZlQVMCKZUw0BbPkSq?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -60,19 +61,19 @@
             <div class="divFotos">
                 <figure>
                     <img class="bordeRedondo" src="img/Imagen1.jpg" alt="">
-                    <figcaption class="centrar">Imagen 1</figcaption>
+                    <figcaption class="centrar lato-regular justificar">La estampa legendaria del Oeste. Un instante congelado en el tiempo que representa la libertad, el peligro y la profunda conexión entre el jinete y su montura, recortados contra un sol que todo lo baña.</figcaption>
                 </figure>
                 <figure>
                     <img class="bordeRedondo" src="img/Imagen2.jpg" alt="">
-                    <figcaption class="centrar lato-regular">Imagen 2</figcaption>
+                    <figcaption class="centrar lato-regular justificar">Es en estas pausas contemplativas donde la banda sonora brilla. Mientras el mundo se detiene, una suave melodía de guitarra parece nacer del propio paisaje, acompañando la soledad del forajido y dando voz a la inmensidad que lo rodea.</figcaption>
                 </figure>
                 <figure>
                     <img class="bordeRedondo" src="img/Imagen3.jpg" alt="">
-                    <figcaption class="centrar lato-regular">Imagen 3</figcaption>
+                    <figcaption class="centrar lato-regular justificar">En escenas como esta, la música abandona la melodía para convertirse en pura tensión. El ritmo implacable de la percusión se fusiona con el chapoteo de los cascos en el barro, creando una marcha sombría y llena de determinación. No es una canción de paisajes, sino el pulso de una cacería o una huida, donde cada nota de la orquesta subraya la lealtad inquebrantable y el peligro que aguarda entre la niebla.</figcaption>
                 </figure>
                 <figure>
                     <img class="bordeRedondo" src="img/Imagen4.jpg" alt="">
-                    <figcaption class="centrar lato-regular">Imagen 4</figcaption>
+                    <figcaption class="centrar lato-regular justificar">Aquí la banda sonora se despoja de su épica para volverse tan densa y misteriosa como la propia niebla del pantano. Las melodías se disuelven en texturas ambientales y acordes inquietantes que se mezclan con los sonidos de la naturaleza. Es la música del misterio y del peligro latente, una atmósfera sonora que te envuelve y te advierte que, en la quietud de estas aguas doradas, no todo es lo que parece.</figcaption>
                 </figure>
             </div>
         </section>
